kubernetes/gitlab-kubernetes/gitlab-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: gitlab
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`gitlab.internal.arthurvardevanyan.com`) || Host(`gitlab.arthurvardevanyan.com`)"
      kind: Rule
      services:
        - name: gitlab
          port: 80
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - match: "HostSNI(`gitlab.internal.arthurvardevanyan.com`) || HostSNI(`gitlab.arthurvardevanyan.com`)"
      services:
        - name: gitlab
          port: 443
  tls:
    domains:
      - main: gitlab.internal.arthurvardevanyan.com
        sans:
          - gitlab.arthurvardevanyan.com
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  entryPoints:
    - registry
  routes:
    - match: "HostSNI(`gitlab.internal.arthurvardevanyan.com`) || HostSNI(`gitlab.arthurvardevanyan.com`)"
      services:
        - name: gitlab
          port: 5050
  tls:
    domains:
      - main: gitlab.internal.arthurvardevanyan.com
        sans:
          - gitlab.arthurvardevanyan.com
    passthrough: true
